# glm-coding-plan-watcher

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  README.zh-CN.md  config.example.yaml  package-lock.json  package.json  pyproject.toml
docs/: ARCHITECTURE.md  PACKAGING.md
packaging/: glm-plan-daemon.spec
sidecar/: daemon_main.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/glm_plan_watcher/: __init__.py  __main__.py  browser.py  cli.py  config.py  db.py  detector.py  exceptions.py  headful.py  logging_setup.py  models.py  notifier.py  scheduler.py  selectors.py  site_adapter.py  storage.py  watcher.py  worker.py
src/glm_plan_watcher/daemon/: __init__.py  api_models.py  app.py  ingest.py  security.py  supervisor.py
tests/: conftest.py  test_config.py  test_daemon_api.py  test_db.py  test_detector.py  test_ingest.py  test_scheduler.py  test_security.py  test_supervisor.py  test_watcher.py
tests/fixtures/: auth_required.html  available.html  sold_out.html  unavailable.html
ui/: index.html  main.js  styles.css
