[package]
name = "glm-plan-watcher-shell"
version = "0.1.0"
description = "Menu-bar shell for GLM Coding Plan Watcher"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
